tags/2013-08-29_cppreference/Archive/4738cbb25a91b9092fba2355a5f805fa-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:56:1: error: expected ‘}’ at end of input
 }
 ^
main.cpp:20:28: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
 scanf("%d", &contribuintes);
                            ^
main.cpp:23:28: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
 scanf("%f", &SalarioMinimo);
                            ^
main.cpp:30:25: warning: ignoring return value of ‘char* gets(char*)’, declared with attribute warn_unused_result [-Wunused-result]
     gets(pessoas[i].CPF);
                         ^
main.cpp:33:41: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
     scanf("%d", &pessoas[i].rendaMensal);
                                         ^
main.cpp:36:42: warning: ignoring return value of ‘int scanf(const char*, ...)’, declared with attribute warn_unused_result [-Wunused-result]
     scanf("%d", &pessoas[i].Ndependentes);
                                          ^
